--- a/businesses.html
+++ b/businesses.html
@@ -192,7 +192,7 @@
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="mt-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
@@ -231,14 +231,14 @@
              Ansaf Mining, Ansaf Services, Ansaf Logistic,<br>
              Ansaf Trading dan Ansaf Rent.
           </p>
-          <h6 class="text-white d-lg-block d-none">
+          <p class="text-white d-lg-block d-none">
             PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
             Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
             trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
             Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara<br>
             sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,<br>
             Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
-          </h6>
+          </p>
         </div>
       </div>
       <div class="row thumbnail-bus bg-light-gray">
@@ -251,20 +251,12 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Mining
                 </h2>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 d-none d-lg-block">
-                  Seiring dengan pengalaman dalam bidang Usaha<br>
-                  Jasa Penambangan batubara maka PT. Ansaf Inti<br>
-                  Resources mulai melakukan pengembangan usaha<br>
-                  untuk mengelola IUP di Embalut dan Batuah dan<br>
+                <p class="text-gray font-roboto mb-lg-3 mb-5 details">
+                  Seiring dengan pengalaman dalam bidang Usaha
+                  Jasa Penambangan batubara maka PT. Ansaf Inti
+                  Resources mulai melakukan pengembangan usaha
+                  untuk mengelola IUP di Embalut dan Batuah dan
                   melakukan diversifikasi usaha ke bidang lain...
-                </p>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 d-lg-none">
-                  Seiring dengan pengalaman dalam bidang<br>
-                  Usaha Jasa Penambangan batubara maka PT.<br>
-                  Ansaf Inti Resources mulai melakukan<br>
-                  pengembangan usaha untuk mengelola IUP di<br>
-                  Embalut dan Batuah dan melakukan<br>
-                  diversifikasi usaha ke bidang lain...
                 </p>
                 <a href="business-mining.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
@@ -287,20 +279,8 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Services
                 </h2>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 d-none d-lg-block">
-                  Semenjak berdirinya di tahun 2014 sebagai perusahaan<br>
-                  penyedia jasa pertambangan, Ansaf telah melayani<br>
-                  serangkaian layanan kontrak pertambangan diberbagai<br>
-                  perusahaan. Kita menangani perencanaan tambang,<br>
-                  pengangkutan lapisan tanah penutup...
-                </p>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 d-lg-none">
-                  Semenjak berdirinya di tahun 2014 sebagai<br>
-                  perusahaan penyedia jasa pertambangan,<br>
-                  Ansaf telah melayani serangkaian layanan<br>
-                  kontrak pertambangan diberbagai perusahaan.<br>
-                  Kita menangani perencanaan tambang,<br>
-                  pengangkutan lapisan tanah penutup...
+                <p class="text-gray font-roboto mb-lg-3 mb-5 details">
+                  Semenjak berdirinya di tahun 2014 sebagai perusahaan penyedia jasa pertambangan, Ansaf telah melayani serangkaian layanan kontrak pertambangan diberbagai perusahaan. Kita menangani perencanaan tambang, pengangkutan lapisan tanah penutup...
                 </p>
                 <a href="business-services.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
@@ -317,20 +297,8 @@
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Logistic
                 </h2>
-                <p class="text-gray font-roboto  mb-lg-3 mb-5 d-none d-lg-block">
-                  Sejak tahun 2018, PT Ansaf Inti Resources berupaya<br>
-                  melakukan diversifikasi usaha dengan menjajaki<br>
-                  usaha dibidang support logistik bagi kegiatan coal<br>
-                  barging. Saat ini terdapat 2 perusahaan yang<br>
-                  bergerak dibidang support coal barging...
-                </p>
-                <p class="text-gray font-roboto  mb-lg-3 mb-5 d-lg-none">
-                  Sejak tahun 2018, PT Ansaf Inti Resources<br>
-                  berupaya melakukan diversifikasi usaha dengan<br>
-                  menjajaki usaha dibidang support logistik bagi<br>
-                  kegiatan coal barging. Saat ini terdapat 2<br>
-                  perusahaan yang bergerak dibidang support<br>
-                  coal barging...
+                <p class="text-gray font-roboto  mb-lg-3 mb-5 details">
+                  Sejak tahun 2018, PT Ansaf Inti Resources berupaya melakukan diversifikasi usaha dengan menjajaki usaha dibidang support logistik bagi kegiatan coal barging. Saat ini terdapat 2 perusahaan yang bergerak dibidang support coal barging...
                 </p>
                 <a href="business-logistic.html" class="link-gray-border my-lg-3 d-inline-block">
                   SELENGKAPNYA
