--- a/contact.html
+++ b/contact.html
@@ -192,7 +192,7 @@
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="mt-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
@@ -212,7 +212,7 @@
             <div class="inline-block">
               <div class="content-wrapper d-flex">
                 <div class="inline-block">
-                    <img class="mt-3" src="images/line-gray-11.png" alt="">
+                    <img class="mt-3 mt-lg-0" src="images/line-gray-11.png" alt="">
                 </div>
                 <div class="inline-block pl-lg-4 pl-2">
                     <h2 class="text-white mb-lg-4">
