--- a/projects.html
+++ b/projects.html
@@ -192,7 +192,7 @@
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block">
-                <img class="mt-3" src="images/line-gray-11.png" alt="">
+                <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
