--- a/bod.html
+++ b/bod.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Board of Directors | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -208,7 +209,7 @@
     </div> 
     <div class="container-fluid bod-mid">
       <div class="row first-section">
-        <div class="col-lg-3 text-center offset-lg-3 d-none d-lg-block">
+        <div class="col-lg-3 text-center offset-lg-3 d-none d-lg-block" data-aos="fade-up">
           <div class="portraits-wrapper">
             <img class="portraits mb-lg-2" src="images/bod-image-portraits-03.jpg" alt="">
             <h6 class="text-orange text-center mt-lg-5">
@@ -219,7 +220,7 @@
             </h4>
           </div>
         </div>
-        <div class="col-lg-3 text-center d-none d-lg-block">
+        <div class="col-lg-3 text-center d-none d-lg-block" data-aos="fade-up">
           <div class="portraits-wrapper">
             <img class="portraits mb-lg-2" src="images/bod-image-portraits-04.jpg" alt="">
             <h6 class="text-orange text-center mt-lg-5">
@@ -230,7 +231,7 @@
             </h4>
           </div>
         </div>
-        <div class="col-lg-12 d-lg-none px-0">
+        <div class="col-lg-12 d-lg-none px-0" data-aos="fade-left">
           <div class="carousel-bod owl-theme">
             <div class="item">
               <h4 class="text-white text-center mb-4">
@@ -278,10 +279,10 @@
           <img class="w-100 d-none d-lg-block" src="images/bod-bottom-04.jpg" alt="">
           <img class="w-100 d-lg-none" src="images/bod-bottom-mobile-03.jpg" alt="">
           <div class="details-wrapper">
-            <h2 class="text-orange font-50">
+            <h2 class="text-orange font-50" data-aos="fade-right">
               “
             </h2>
-            <p class="text-white font-titillium-italic">
+            <p class="text-white font-titillium-italic" data-aos="fade-left">
               Membangun kemitraan berintegritas,<br>
               komitmen yang kokoh, dan<br>
               produktifitas optimal
@@ -369,6 +370,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
     <script src="js/app.js"></script>
 </body>
 </html>
