--- a/businesses.html
+++ b/businesses.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Our Businesses | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
@@ -205,7 +206,7 @@
     </div> 
     <div class="container-fluid bus-mid">
       <div class="row first-section">
-        <div class="col-lg-12">
+        <div class="col-lg-12" data-aos="fade-up" data-aos-offset="300">
           <h3 class="text-white my-4 d-none d-lg-block">
             PT Ansaf Inti Resources
           </h3>
@@ -213,37 +214,19 @@
             PT Ansaf<br>
             Inti Resources
           </h3>
-          <p class="text-white d-lg-none">
-            PT Ansaf Inti Resources (AIR) merupakan<br>
-            perusahaan yang bergerak dibidang<br>
-            pertambangan yang beroperasi di provinsi<br>
-            Kalimantan Timur. Perusahaan yang berdiri<br>
-            pada 22 juli 2011 memulai usahanya sebagai<br>
-            perusahaan yang bergerak di coal trading<br>
-             company. Pada tahun 2014 PT Ansaf Inti<br>
-             Resources memulai usaha lain sebagai<br>
-             perusahaan jasa pertambangan. Sedangkan<br>
-             pada tahun 2018 PT Ansaf Inti Resources<br>
-             mengembangkan usaha lain dibidang layanan<br>
-             port & jetty batu bara sehingga sampai saat ini<br>
-             PT Ansaf Inti Resources memiliki 5 bisnis<br>
-             utama dibidang pertambangan yang disebut<br>
-             Ansaf Mining, Ansaf Services, Ansaf Logistic,<br>
-             Ansaf Trading dan Ansaf Rent.
-          </p>
-          <p class="text-white d-lg-block d-none">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi<br>
-            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal<br>
-            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.<br>
-            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara<br>
-            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,<br>
+          <p class="text-white brief">
+            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi
+            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal
+            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.
+            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara
+            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,
             Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
           </p>
         </div>
       </div>
       <div class="row thumbnail-bus bg-light-gray">
         <div class="col-lg-6 item order-lg-1 order-2">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
@@ -265,13 +248,13 @@
           </div>
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-2 order-1">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
+          <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-3 order-3">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
+          <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
         </div>
         <div class="col-lg-6 item  order-lg-4 order-4">
-          <div class="content-wrapper d-flex">
+          <div  data-aos="fade-right" class="content-wrapper d-flex">
             <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
@@ -289,7 +272,7 @@
           </div>
         </div>
         <div class="col-lg-6 item  order-lg-5 order-6">
-          <div class="content-wrapper d-flex">
+          <div  data-aos="fade-right" class="content-wrapper d-flex">
             <div class="d-none d-lg-inline-block">
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
@@ -307,25 +290,25 @@
           </div>
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-6 order-5">
-          <img class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
+          <img  data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
         </div>
       </div>
       <div class="row bus-client text-center">
         <div class="col-lg-12 my-lg-5">
-          <h3 class="text-dark-blue">
+          <h3  data-aos="fade-up" class="text-dark-blue">
             Our Subsidiaries
           </h3>
         </div>
-        <div class="col-lg-2 col-6 p-lg-0 p-5 offset-lg-2 mt-lg-5">
+        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 offset-lg-2 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-05.png" alt="">
         </div>
-        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
+        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-06.png" alt="">
         </div>
-        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
+        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-07.png" alt="">
         </div>
-        <div class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
+        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
           <img class="img-fluid " src="images/bus-logo-08.png" alt="">
         </div>
       </div>
@@ -403,6 +386,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
