--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Home | Ansaf</title>
 </head>
 <body>
@@ -193,7 +194,7 @@
                     <div class="item">
                         <div class="row">
                             <div class="col-lg-2 home-caption">
-                                <div class="wrapper d-lg-flex d-none">
+                                <div class="wrapper d-lg-flex d-none" data-aos="fade-right">
                                     <div class="inline-block">
                                         <img class="w-auto mt-lg-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -212,7 +213,7 @@
                                 </div>
                             </div>
                             <div class="col-lg-10">
-                                <div class="wrapper d-flex d-lg-none">
+                                <div class="wrapper d-flex d-lg-none" data-aos="fade-right">
                                     <div class="inline-block">
                                         <img class="mt-4" src="images/line-gray-11.png" alt="">
                                     </div>
@@ -229,7 +230,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <img class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-07-02.png" alt="">
+                                <img data-aos="fade-up" class="img-fluid float-right d-none d-lg-block" src="images/home-top-image-slider-07-02.png" alt="">
                                 <img class="img-fluid float-right d-lg-none" src="images/home-top-image-slider-mobile-15.jpg" alt="">
                                 <div class="slide-number">
                                     <h6 class="text-white">
@@ -438,7 +439,7 @@
                 </div>
             </div>
         </div>
-        <div class="row home-about">
+        <div class="row home-about" data-aos="fade-up">
             <div class="col-lg-12">
                 <div class="mx-auto d-block text-center">
                     <h6 class="text-orange mb-4">
@@ -473,7 +474,7 @@
     <div class="container-fluid home-mid-content pt-5">
         <div class="row my-5">
             <div class="col-lg-3 py-lg-5 pl-0">
-                <div class="wrapper d-flex">
+                <div class="wrapper d-flex" data-aos="fade-right">
                     <div class="inline-block">
                         <img class="mt-5 pt-lg-1" src="images/line-gray-11.png" alt="">
                     </div>
@@ -488,7 +489,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-9 pr-0 py-lg-0 py-5 px-lg-0 px-0">
+            <div class="col-lg-9 pr-0 py-lg-0 py-5 px-lg-0 px-0" data-aos="fade-up">
                 <img class="white-shadow-right d-none d-lg-block" src="images/white-shadow-right-09.png" alt="">
                 <div class="carousel-ourbusiness owl-theme">
                     <div class="item">
@@ -548,7 +549,7 @@
             <img class="tractors move-right" src="images/ornaments-home-bottom-09.png" alt="">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-9 offset-lg-3 pl-0 pl-lg-3 pr-0">
+                    <div class="col-lg-9 offset-lg-3 pl-0 pl-lg-3 pr-0" data-aos="fade-right">
                         <h6 class="text-orange d-none d-lg-block">
                             NILAI-NILAI KAMI
                         </h6>
@@ -574,7 +575,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row my-lg-5">
+                <div class="row my-lg-5" data-aos="fade-down">
                     <div class="col-lg-9 offset-lg-3 pr-lg-5 pr-0 pl-2">
                         <div class="row d-none d-lg-flex">
                             <div class="col-lg-4">
@@ -624,7 +625,7 @@
             <div class="col-lg-12 px-lg-0">
                 <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
                 <img class="img-content" src="images/news-images-content-10-08.jpg" alt="">
-                <div class="content-wrapper d-flex">
+                <div class="content-wrapper d-flex" data-aos="fade-right">
                     <div class="inline-block">
                         <img class="w-auto mt-lg-5" src="images/line-gray-11.png" alt="">
                     </div>
@@ -653,7 +654,7 @@
                 <img class="ornament-blue" src="images/segitiga-biru-kiri-12.png" alt="">
                 <img class="img-fluid" src="images/news-image-content-mobile-17.jpg" alt="">
                 <div class="details">
-                    <div class="content-wrapper d-flex">
+                    <div class="content-wrapper d-flex"  data-aos="fade-right">
                         <div class="inline-block">
                             <img class="mt-4 pt-3" src="images/line-gray-11.png" alt="">
                         </div>
@@ -682,14 +683,14 @@
         </div>
     </div>
     <div class="container-fluid footer-content-home">
-        <div class="row text-center">
+        <div class="row text-center" data-aos="fade-down">
             <div class="col-lg-12">
                 <h4 class="text-dark-blue pb-lg-4">
                     Pencapaian Kami
                 </h4>
             </div>
         </div>
-        <div class="row">
+        <div class="row" data-aos="fade-up">
             <div class="container">
                 <div class="row text-center counter-wrapper">
                     <div class="col-lg-4 py-lg-0 py-4">
@@ -767,6 +768,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
