--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>About | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex"  data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-lg-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -217,7 +218,7 @@
         <div class="col-lg-12 pl-lg-0 px-0">
           <img class="img-fluid d-lg-none" src="images/mid-content-images-mobile-05.jpg" alt="" >
           <div class="content-wrapper d-flex">
-            <div class="inline-block pl-lg-5">
+            <div class="inline-block pl-lg-5"  data-aos="fade-right">
                 <h2 class="text-orange font-50">
                   “
                 </h2>
@@ -234,10 +235,10 @@
                 </h6>
             </div>
           </div>
-          <img class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
+          <img data-aos="fade-left" class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
-      <div class="row second-section">
+      <div class="row second-section"  data-aos="fade-up">
         <div class="col-lg-8 offset-lg-3">
           <h3 class="text-white">
             Milestone
@@ -311,7 +312,7 @@
     </div>
     <div class="container-fluid about-bottom-content">
       <div class="row">
-        <div class="col-lg-5 offset-lg-6">
+        <div class="col-lg-5 offset-lg-6"  data-aos="fade-left">
           <h5 class="text-orange">
             Nilai-Nilai Kami
           </h5>
@@ -401,7 +402,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>  
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
     <script src="js/app.js"></script>
 </body>
 </html>
