--- a/business-logistic.html
+++ b/business-logistic.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Businesses Logistic | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -213,7 +214,7 @@
       <img class="tractor-logistic move-right" src="images/business-logistic-tractors-02.png" alt="">
       <div class="row first-section">
         <div class="col-lg-6 offset-lg-6 pl-lg-3 pl-0">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block d-lg-none">
               <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -257,7 +258,7 @@
     <div class="container-fluid detail-logistic">
       <div class="row first-section">
         <div class="col-lg-5 ml-lg-5 py-lg-5 order-2 order-lg-1 pl-lg-3 pl-0">
-          <div class="content-wrapper pt-lg-5 d-flex">
+          <div class="content-wrapper pt-lg-5 d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-lg-0 mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -284,16 +285,16 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2">
-          <img class="img-fluid d-none d-lg-block" src="images/businesses-logistic-content-images-02.png" alt="">
-          <img class="img-fluid d-lg-none p-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
+          <img data-aos="fade-up" class="img-fluid d-none d-lg-block" src="images/businesses-logistic-content-images-02.png" alt="">
+          <img data-aos="fade-up" class="img-fluid d-lg-none p-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
         </div>
       </div>
       <div class="row second-section">
         <div class="col-lg-12 d-lg-none">
-          <img class="img-fluid d-lg-none p-4 mb-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
+          <img data-aos="fade-up" class="img-fluid d-lg-none p-4 mb-4" src="images/businesses-logistic-content-images-mobile-04.jpg" alt="">
         </div>
         <div class="col-lg-5 py-lg-5 pl-lg-3 pl-0">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-lg-0 mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -420,6 +421,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
