--- a/business-services.html
+++ b/business-services.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Businesses Services | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -213,7 +214,7 @@
       <img class="scope-services move-right" src="images/business-services-scope-content-03.png" alt="">
       <div class="row first-section">
         <div class="col-lg-6 offset-lg-6 pl-lg-3 pl-0">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block d-lg-none">
               <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -254,7 +255,7 @@
         <div class="col-lg-6">
           <div class="row">
             <div class="col-lg-12 px-lg-3 pl-0 pr-5">
-              <div class="content-wrapper d-flex">
+              <div class="content-wrapper d-flex" data-aos="fade-right">
                 <div class="inline-block">
                     <img class="mt-3" src="images/line-gray-11.png" alt="">
                 </div>
@@ -278,7 +279,7 @@
               </div>
             </div>
           </div>
-          <div class="row items my-5">
+          <div class="row items my-5" data-aos="fade-up">
             <div class="col-lg-12 bg-light-gray p-5">
               <h3 class="my-5">
                 Image
@@ -303,7 +304,7 @@
               </p>
             </div>
           </div>
-          <div class="row items my-5">
+          <div class="row items my-5"  data-aos="fade-up">
             <div class="col-lg-12 bg-light-gray p-5">
               <h3 class="my-5">
                 Image
@@ -327,7 +328,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="row items my-lg-5">
+          <div class="row items my-lg-5"  data-aos="fade-up">
             <div class="col-lg-12 bg-light-gray p-5">
               <h3 class="my-5">
                 Image
@@ -352,7 +353,7 @@
               </p>
             </div>
           </div>
-          <div class="row items my-5">
+          <div class="row items my-5"  data-aos="fade-up">
             <div class="col-lg-12 bg-light-gray p-5">
               <h3 class="my-5">
                 Image
@@ -454,7 +455,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script> 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  
     <script src="js/app.js"></script>
 </body>
 </html>
