--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Contact Us | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
@@ -206,9 +207,9 @@
     <div class="container-fluid contact-mid bg-dark-blue">
       <div class="row">
         <div class="col-lg-12 px-0">
-          <img class="content-mid d-none d-lg-block" src="images/contact-mid-first-section-02.png" alt="">
-          <img class="content-mid d-lg-none" src="images/contact-mid-first-section-mobile-03.jpg" alt="">
-          <div class="content-wrapper d-flex">
+          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/contact-mid-first-section-02.png" alt="">
+          <img data-aos="fade-up" class="content-mid d-lg-none" src="images/contact-mid-first-section-mobile-03.jpg" alt="">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
               <div class="content-wrapper d-flex">
                 <div class="inline-block">
@@ -236,7 +237,7 @@
         </div>
       </div>
     </div>
-    <div class="container section-forms-ansaf">
+    <div class="container section-forms-ansaf" data-aos="fade-up">
       <div class="row mt-lg-5">
         <div class="col-lg-6">
             <div class="form-group left-forms">
@@ -263,7 +264,7 @@
       </div>
       </div>
     </div>
-    <div class="container-fluid">
+    <div class="container-fluid" data-aos="fade-up">
       <div class="row">
         <div class="col-lg-12 px-lg-0">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8153953.168616226!2d107.46645460032195!3d-3.71766482772731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2df679e3fd85d3c5%3A0x2bb0c88e0315e87b!2sPT.%20Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1616899120793!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
@@ -343,7 +344,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>  
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
     <script src="js/app.js"></script>
 </body>
 </html>
