--- a/csr-activities.html
+++ b/csr-activities.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>CSR Activities | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
@@ -206,9 +207,9 @@
     <div class="container-fluid csr-mid bg-dark-blue">
       <div class="row">
         <div class="col-lg-12 px-0">
-          <img class="content-mid d-none d-lg-block" src="images/csr-mid-first-section-07.png" alt="">
-          <img class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
-          <div class="content-wrapper d-flex">
+          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/csr-mid-first-section-07.png" alt="">
+          <img data-aos="fade-up" class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block pl-lg-5 offset-lg-1">
                 <h2 class="text-white mb-lg-4">
                   Tulisan Pembuka
@@ -244,10 +245,10 @@
           <div class="tab-content">
             <div class="tab-pane pt-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
               <div class="d-lg-flex pt-5 mt-lg-5">
-                <div class="col-lg-7 col-12 pl-lg-0">
+                <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
                   <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
                 </div>
-                <div class="col-lg-5 col-12 details mt-lg-0 mt-5 mb-lg-3 mb-2">
+                <div class="col-lg-5 col-12 details mt-lg-0 mt-5 mb-lg-3 mb-2" data-aos="fade-right">
                   <h4 class="text-dark-blue">
                     Petangus Coal Mine
                   </h4>
@@ -428,6 +429,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
