--- a/gallery.html
+++ b/gallery.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Gallery | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
@@ -205,7 +206,7 @@
     </div> 
     <div class="container-fluid bus-mid">
       <div class="row first-section">
-        <div class="col-lg-12 text-center">
+        <div class="col-lg-12 text-center" data-aos="fade-up">
           <h3 class="text-white my-lg-4">
             Tulisan Pembuka
           </h3>
@@ -216,7 +217,7 @@
           </p>
         </div>
       </div>
-      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center d-none d-lg-flex">
+      <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center d-none d-lg-flex" data-aos="fade-up">
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
             <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
@@ -314,7 +315,7 @@
           </p>
         </div>
       </div>
-      <div class="row d-lg-none my-5 mx-2">
+      <div class="row d-lg-none my-5 mx-2" data-aos="fade-up">
         <div class="carousel-mobile-projects-list owl-theme">
           <div class="item">
             <div class="row">
@@ -575,7 +576,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>   
     <script src="js/app.js"></script>
 </body>
 </html>
