--- a/prev-projects.html
+++ b/prev-projects.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Previous Projects | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class=" mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -211,7 +212,7 @@
     </div> 
     <div class="container-fluid prevp-mid bg-dark-blue">
       <div class="row first-section">
-        <div class="col-lg-5 details order-lg-1 order-2">
+        <div class="col-lg-5 details order-lg-1 order-2" data-aos="fade-right">
           <h2 class="text-orange font-50">
             “
           </h2>
@@ -221,7 +222,7 @@
             infrastruktur di beberapa perusahaan di Kalimantan Timur
           </p>
         </div>
-        <div class="col-lg-7 pr-lg-0 order-lg-2 order-1 px-0">
+        <div class="col-lg-7 pr-lg-0 order-lg-2 order-1 px-0" data-aos="fade-up">
           <img class="img-content d-none d-lg-block" src="images/prev-projects-mid-section-content-02.png" alt="">
           <img class="img-content d-lg-none" src="images/prev-projects-mid-section-content-mobile-25.jpg" alt="">
         </div>
@@ -230,7 +231,7 @@
     <div class="container-fluid list-prevp">
       <div class="row">
         <div class="col-lg-12 pl-lg-0 px-2">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block d-none d-lg-inline-block">
                 <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -246,7 +247,7 @@
           <hr class="mx-4 d-lg-none">
         </div>
       </div>
-      <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex">
+      <div class="row my-lg-5 mx-lg-5 font-roboto details d-none d-lg-flex" data-aos="fade-up">
         <div class="col-lg-6 px-lg-0">
           <div class="row mb-lg-4">
             <div class="col-lg-4">
@@ -492,7 +493,7 @@
           </div>
         </div>
       </div>
-      <div class="row d-lg-none mb-5 mt-3 mx-3 font-roboto details">
+      <div class="row d-lg-none mb-5 mt-3 mx-3 font-roboto details" data-aos="fade-up">
         <div class="carousel-mobile-projects-list owl-theme">
           <div class="item">
             <div class="col-lg-12 px-0">
@@ -641,6 +642,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
