--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Our Projects | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
             </div>
@@ -206,7 +207,7 @@
     <div class="container-fluid proj-mid position-relative overflow-hidden">
       <img class="projects-tractor move-left" src="images/projects-tractor-02.png" alt="">
       <div class="row first-section">
-        <div class="col-lg-5 offset-lg-2 details order-lg-1 order-2">
+        <div class="col-lg-5 offset-lg-2 details order-lg-1 order-2" data-aos="fade-right">
           <h3 class="text-white my-lg-4 d-none d-lg-block">
             PT Ansaf Inti Resources
           </h3>
@@ -222,12 +223,12 @@
             memulai usaha lain sebagai perusahaan jasa pertambangan.
           </p>
         </div>
-        <div class="col-lg-5 pr-lg-0 order-lg-2 order-1 px-0">
+        <div class="col-lg-5 pr-lg-0 order-lg-2 order-1 px-0" data-aos="fade-up">
           <img class="img-fluid d-none d-lg-block" src="images/projects-second-section-content-02.png" alt="">
           <img class="img-fluid d-lg-none" src="images/projects-second-section-content-mobile-02.png" alt="">
         </div>
       </div>
-      <div class="row second-section">
+      <div class="row second-section" data-aos="fade-up">
         <div class="col-lg-12 pl-lg-3 pl-0">
           <div class="content-wrapper d-flex">
             <div class="inline-block d-lg-none">
@@ -341,6 +342,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
