--- a/vision-mission.html
+++ b/vision-mission.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Vision Mission | Ansaf</title>
 </head>
 <body>
@@ -190,7 +191,7 @@
       <div class="row">
         <div class="col-lg-12 pl-0">
           <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
-          <div class="content-wrapper d-flex">
+          <div class="content-wrapper d-flex"  data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-5" src="images/line-gray-11.png" alt="">
             </div>
@@ -212,7 +213,7 @@
         <div class="col-lg-12 pl-lg-0 px-0">
           <img class="img-fluid d-lg-none" src="images/mid-content-images-mobile-05.jpg" alt="" >
           <div class="content-wrapper d-flex">
-            <div class="inline-block pl-lg-4">
+            <div class="inline-block pl-lg-4"  data-aos="fade-right">
                 <h3 class="text-white mb-lg-4">
                   Visi
                 </h3>
@@ -229,17 +230,17 @@
                 </p>
             </div>
           </div>
-          <img class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
+          <img  data-aos="fade-left" class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
         </div>
       </div>
-      <div class="row mt-lg-5 second-section">
+      <div class="row mt-lg-5 second-section"  data-aos="fade-down">
         <div class="col-lg-12 text-center">
           <h3 class="text-white mt-lg-5 mb-lg-3">
             Misi
           </h3>
         </div>
       </div>
-      <div class="row d-none d-lg-flex">
+      <div class="row d-none d-lg-flex"  data-aos="fade-up">
         <div class="container">
           <div class="row my-lg-5">
             <div class="col-lg-4 text-center">
@@ -281,7 +282,7 @@
           </div>
         </div>
       </div>
-      <div class="row my-lg-5 d-none d-lg-flex">
+      <div class="row my-lg-5 d-none d-lg-flex"  data-aos="fade-up">
         <div class="container">
           <div class="row">
             <div class="col-lg-4 offset-lg-2 text-center">
@@ -310,7 +311,7 @@
           </div>
         </div>
       </div>
-      <div class="row d-lg-none">
+      <div class="row d-lg-none"  data-aos="fade-up">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 px-4">
@@ -479,6 +480,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js'></script>   
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> 
     <script src="js/app.js"></script>
 </body>
 </html>
