--- a/about.html
+++ b/about.html
@@ -222,17 +222,11 @@
                 <h2 class="text-orange font-50">
                   “
                 </h2>
-                <p class="text-white font-titillium-italic d-none d-lg-block">
-                  ...untuk kami di Ansaf, baik tidaklah jika kami mampu berkontribusikan<br>
-                  yang paling OPTIMAL - dengan sepenuh hati untuk tumbuh BERSAMA<br>
+                <p class="text-white font-titillium-italic brief-about">
+                  ...untuk kami di Ansaf, baik tidaklah jika kami mampu berkontribusikan
+                  yang paling OPTIMAL - dengan sepenuh hati untuk tumbuh BERSAMA
                   dengan komitmen dan kerjasama tim yang kuat.
                 </p>
-                <h6 class="text-white font-titillium-italic d-lg-none">
-                  ...untuk kami di Ansaf, baik tidaklah jika kami<br>
-                  mampu berkontribusikan yang paling OPTIMAL -<br>
-                  dengan sepenuh hati untuk tumbuh BERSAMA<br>
-                  dengan komitmen dan kerjasama tim yang kuat.
-                </h6>
             </div>
           </div>
           <img data-aos="fade-left" class="content-mid d-none d-lg-block" src="images/mid-content-images-05.png" alt="">
