--- a/businesses.html
+++ b/businesses.html
@@ -231,9 +231,11 @@
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
+                <a href="business-mining.html">
                 <h2 class="text-dark-blue mb-lg-4 mb-3">
                   Ansaf Mining
                 </h2>
+                </a>
                 <p class="text-gray font-roboto mb-lg-3 mb-5 details">
                   Seiring dengan pengalaman dalam bidang Usaha
                   Jasa Penambangan batubara maka PT. Ansaf Inti
@@ -248,10 +250,14 @@
           </div>
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-2 order-1">
-          <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
+          <a href="business-mining.html">
+            <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
+          </a>
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-3 order-3">
-          <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
+          <a href="business-services.html">
+            <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
+          </a>
         </div>
         <div class="col-lg-6 item  order-lg-4 order-4">
           <div  data-aos="fade-right" class="content-wrapper d-flex">
@@ -259,9 +265,11 @@
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4 mb-3">
-                  Ansaf Services
-                </h2>
+                <a href="business-services.html">
+                  <h2 class="text-dark-blue mb-lg-4 mb-3">
+                    Ansaf Services
+                  </h2>
+                </a>
                 <p class="text-gray font-roboto mb-lg-3 mb-5 details">
                   Semenjak berdirinya di tahun 2014 sebagai perusahaan penyedia jasa pertambangan, Ansaf telah melayani serangkaian layanan kontrak pertambangan diberbagai perusahaan. Kita menangani perencanaan tambang, pengangkutan lapisan tanah penutup...
                 </p>
@@ -277,9 +285,11 @@
                 <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
             </div>
             <div class="inline-block pl-lg-4">
-                <h2 class="text-dark-blue mb-lg-4 mb-3">
-                  Ansaf Logistic
-                </h2>
+                <a href="business-logistic.html">
+                  <h2 class="text-dark-blue mb-lg-4 mb-3">
+                    Ansaf Logistic
+                  </h2>
+                </a>
                 <p class="text-gray font-roboto  mb-lg-3 mb-5 details">
                   Sejak tahun 2018, PT Ansaf Inti Resources berupaya melakukan diversifikasi usaha dengan menjajaki usaha dibidang support logistik bagi kegiatan coal barging. Saat ini terdapat 2 perusahaan yang bergerak dibidang support coal barging...
                 </p>
@@ -290,7 +300,9 @@
           </div>
         </div>
         <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-6 order-5">
-          <img  data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
+          <a href="business-logistic.html">
+            <img  data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
+          </a>
         </div>
       </div>
       <div class="row bus-client text-center">
