--- a/business-logistic.html
+++ b/business-logistic.html
@@ -329,7 +329,7 @@
                   companies under PT Ansaf subsidiaries,<br>
                   PT Latahzan.
                 </p>
-                <p class="text-white font-roboto d-lg-none"><br>
+                <p class="text-white font-roboto d-lg-none">
                   <strong>SERVICES</strong><br><br>
                   The dock accept coal barges with sizes from 270 to<br>
                   300 feet, currently is used by one of the mining<br>
