--- a/existing-projects.html
+++ b/existing-projects.html
@@ -216,7 +216,7 @@
           <h2 class="text-orange font-50">
             “
           </h2>
-          <p class="text-white">
+          <p class="text-white font-titillium-italic">
             Dengan sepenuh hati dalam memberikan pelayanan kepada<br>
             para klien, PT Ansaf semakin dipercaya untuk mengerjakan<br>
             beberapa proyek pertambangan batubara baik di Kalimantan<br>
@@ -498,10 +498,10 @@
         <div class="carousel-mobile-projects-list owl-theme">
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -512,10 +512,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -531,10 +531,10 @@
           </div>
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -545,10 +545,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
