--- a/prev-projects.html
+++ b/prev-projects.html
@@ -497,10 +497,10 @@
         <div class="carousel-mobile-projects-list owl-theme">
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -511,10 +511,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -530,10 +530,10 @@
           </div>
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -544,10 +544,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
