--- a/prospective-projects.html
+++ b/prospective-projects.html
@@ -659,10 +659,10 @@
         <div class="carousel-mobile-projects-list owl-theme">
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -673,10 +673,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -692,10 +692,10 @@
           </div>
           <div class="item">
             <div class="col-lg-12 px-0">
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Insani Bara Perkasa (Rain Group Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
@@ -706,10 +706,10 @@
                 Pengangkutan Batubara<br>
               </p>
               <br><br><br>
-              <strong>
+              <h6 class="font-titillium-bold">
                 PT Multi Harapan Utama (Tbk)<br>
                 Tahun: 2016<br>
-              </strong>
+              </h6>
               <br>
               <p>
                 Lokasi:<br>
