--- a/csr.html
+++ b/csr.html
@@ -253,24 +253,14 @@
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019
                   </p>
-                  <p class="text-gray d-none d-lg-block">
-                    Hal pokok yang kami terapkan adalah<br>
-                    memberdayakan. Peduli dan saling berbagi<br>
-                    tidak mesti dengan materi. Ketika tangan<br>
-                    dapat menolong, kami segera lakukan. Ada<br>
-                    sekolah atau lembaga pendidikan lain perlu<br>
-                    pengetahuan dan peningkatan kompetensi<br>
-                    siswa-siswa nya, kami pun tergerak untuk<br>
-                    berbagi pengetahuan.
-                  </p>
-                  <p class="text-gray d-lg-none">
-                    Hal pokok yang kami terapkan adalah<br>
-                    memberdayakan. Peduli dan saling berbagi<br>
-                    tidak mesti dengan materi. Ketika tangan dapat<br>
-                    menolong, kami segera lakukan. Ada sekolah<br>
-                    atau lembaga pendidikan lain perlu<br>
-                    pengetahuan dan peningkatan kompetensi<br>
-                    siswa-siswa nya, kami pun tergerak untuk<br>
+                  <p class="text-gray brief-details">
+                    Hal pokok yang kami terapkan adalah
+                    memberdayakan. Peduli dan saling berbagi
+                    tidak mesti dengan materi. Ketika tangan
+                    dapat menolong, kami segera lakukan. Ada
+                    sekolah atau lembaga pendidikan lain perlu
+                    pengetahuan dan peningkatan kompetensi
+                    siswa-siswa nya, kami pun tergerak untuk
                     berbagi pengetahuan.
                   </p>
                 </div>
@@ -289,24 +279,14 @@
                     Penghargaan dari Baznas Provinsi<br>
                     Kalimantan Timur Tahun 2019   
                   </p>
-                  <p class="text-gray d-none d-lg-block">
-                    Hal pokok yang kami terapkan adalah<br>
-                    memberdayakan. Peduli dan saling berbagi<br>
-                    tidak mesti dengan materi. Ketika tangan<br>
-                    dapat menolong, kami segera lakukan. Ada<br>
-                    sekolah atau lembaga pendidikan lain perlu<br>
-                    pengetahuan dan peningkatan kompetensi<br>
-                    siswa-siswa nya, kami pun tergerak untuk<br>
-                    berbagi pengetahuan.
-                  </p>
-                  <p class="text-gray d-lg-none">
-                    Hal pokok yang kami terapkan adalah<br>
-                    memberdayakan. Peduli dan saling berbagi<br>
-                    tidak mesti dengan materi. Ketika tangan dapat<br>
-                    menolong, kami segera lakukan. Ada sekolah<br>
-                    atau lembaga pendidikan lain perlu<br>
-                    pengetahuan dan peningkatan kompetensi<br>
-                    siswa-siswa nya, kami pun tergerak untuk<br>
+                  <p class="text-gray brief-details">
+                    Hal pokok yang kami terapkan adalah
+                    memberdayakan. Peduli dan saling berbagi
+                    tidak mesti dengan materi. Ketika tangan
+                    dapat menolong, kami segera lakukan. Ada
+                    sekolah atau lembaga pendidikan lain perlu
+                    pengetahuan dan peningkatan kompetensi
+                    siswa-siswa nya, kami pun tergerak untuk
                     berbagi pengetahuan.
                   </p>
                 </div>
